test/Fail/noLevelUnivData.agda
{-# OPTIONS --level-universe #-}

open import Agda.Primitive

data D : LevelUniv where

-- Error:
-- The universe LevelUniv of D does not admit data or record declarations
