test/Fail/noLevelUnivData.err
noLevelUnivData.agda:5.6-7: error: [SortDoesNotAdmitDataDefinitions]
The universe LevelUniv of D
does not admit data or record declarations
when checking the definition of D
